<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="g56055.mobg.meteoapp.fragment.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/actionLoginFragmentToHome"
            app:destination="@id/home"
            app:launchSingleTop="true"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="g56055.mobg.meteoapp.fragment.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/home"
        android:name="g56055.mobg.meteoapp.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="city"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="g56055.mobg.meteoapp.fragment.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_home"
            app:destination="@id/home"
            app:launchSingleTop="true"
            app:popUpTo="@id/searchFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>